--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
-    "nightmare": "^3.0.1"
+    "dotenv": "^6.2.0",
+    "nightmare": "^3.0.1",
+    "twit": "^2.2.11"
   },
   "devDependencies": {},
   "scripts": {
