--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "cheerio": "^1.0.0-rc.2",
     "dotenv": "^6.2.0",
     "nightmare": "^3.0.1",
+    "random-words": "^1.1.0",
     "twit": "^2.2.11"
   },
   "devDependencies": {},
